# nbs

./: .gitignore  README.md  setup.py
nbs_cli/: __init__.py  cli.py  commands.py  extraction.py  fetcher.py  orchestrator.py  pyproject.toml  utensils.py
